canary/nginx-ingress/myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-v1
  labels:
    app: my-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: my-app
    version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-v1
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v1.0.0
  template:
    metadata:
      labels:
        app: my-app
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
    spec:
      containers:
        - name: my-app
          image: polluxx/ecommercemarket:latest
          ports:
            - name: http
              containerPort: 3000
            - name: probe
              containerPort: 8086
          livenessProbe:
            httpGet:
              path: /live
              port: probe
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: probe
            periodSeconds: 5
